# 3eyes-fatebox-v3

./: .gitignore  ARCHITECTURE.md  BOX_PURCHASE_COMPLETE.md  BOX_PURCHASE_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CLAUDE.md  FRONTEND_SETUP_COMPLETE.md  MAINNET_TASKS.md  PROBABILITY_THRESHOLD_CALCS.md  PROBABILITY_THRESHOLD_CHATGPT.md  PROBABILITY_THRESHOLD_CLAUDE.md  PROBABILITY_THRESHOLD_GROK.md  PROGRESS.md  PROJECT_STATUS_REPORT.md  README.md  SECURITY_AUDIT.md  SWITCHBOARD_SDK_MIGRATION.md  SWITCHBOARD_TESTING.md  TESTING_BOX_PURCHASE.md  TWEETS.md  VERCEL_SUBDOMAIN_SETUP.md  WHATS_NEW.md
backend/: .env.example  .gitignore  README.md  package.json  server.js  test-box-purchase.js
backend/config/: badges.js
backend/database/: add_delete_policy.sql  add_public_delete_policy.sql  (+2 more)
backend/program/programs/lootbox_platform/: Cargo.toml
backend/program/programs/lootbox_platform/src/: lib.rs
database/: README.md  add-users-table.sql  current_schema_130126_1337.sql  current_schema_160126_0823.sql  current_schema_160126_2115.sql  current_schema_170126_0818.sql  current_schema_180125_2307.sql  current_schema_210125_0748.sql  fix-config.sql  schema.sql
docs/: WHITEPAPER.md
documentation/: DEPLOY_WALLET_MANAGEMENT.md  DEVNET_MAINNET_STRATEGY.md  NETWORK_DATA_SEPARATION.md  PLATFORM_SPEC.md  QUICK_REFERENCE.md  SECURITY_AUDIT_REPORT.md  SETUP_GUIDE.md  TERMINOLOGY.md  UPDATES_SUMMARY.md
frontend/: DegenBox_box.jsx  Floor.jsx  STYLE_GUIDE.md  VendingMachine.jsx  middleware.js  next.config.mjs  package-lock.json  package.json  proxy.js  vercel.json
(+200 files in other folders)
