[package]
name = "lootbox_platform"
version = "0.1.0"
description = "3Eyes Multi-Tenant Lootbox Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lootbox_platform"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
# Temporarily remove Switchboard to fix build - will add back when implementing VRF
# switchboard-solana = "0.30.0"
